force-app/main/default/objects/RowLog__c/RowLog__c.object-meta.xml
<CustomObject>
    <label>Row Log</label>
    <nameField>
        <displayFormat>RL-{0000}-{YYYY}.{MM}.{DD}</displayFormat>
        <label>Row Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Row Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>