force-app/main/default/objects/RowLog__c/fields/ExceptionLog__c.field-meta.xml
<CustomField>
    <fullName>ExceptionLog__c</fullName>
    <label>Exception Log</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ExceptionLog__c.Type__c</field>
            <operation>equals</operation>
            <value>DmlException, EmailException</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ExceptionLog__c</referenceTo>
    <relationshipLabel>Row Logs</relationshipLabel>
    <relationshipName>RowLogs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>