force-app/main/default/objects/RowLog__c/fields/FailedField__c.field-meta.xml
<CustomField>
    <fullName>FailedField__c</fullName>
    <description>The fields that caused an error.</description>
    <label>Failed Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>