force-app/main/default/objects/RowLog__c/fields/RowFailed__c.field-meta.xml
<CustomField>
    <fullName>RowFailed__c</fullName>
    <label>Row Failed</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>