force-app/main/default/objects/RowLog__c/fields/RowIndex__c.field-meta.xml
<CustomField>
    <fullName>RowIndex__c</fullName>
    <description>Of all rows in the transaction, which row index caused a failure.</description>
    <label>Row Index</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>