force-app/main/default/objects/RowLog__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <label>Status Code</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>